# OpenUSD

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  VERSIONS.md
extras/usd/examples/: CMakeLists.txt
pxr/: CMakeLists.txt  pxr.h.in  pxrConfig.cmake.in
pxr/base/: CMakeLists.txt
pxr/base/arch/: CMakeLists.txt  darwin.h  darwin.mm  fileSystem.cpp  library.cpp  pragmas.h  systemInfo.cpp  timing.cpp
pxr/base/gf/: CMakeLists.txt  dualQuat.template.h  matrix.template.h  numericCast.h  quat.template.h  vec.template.h
pxr/base/js/: CMakeLists.txt  json.cpp  value.cpp
pxr/base/plug/: CMakeLists.txt  initConfig.cpp  plugin.cpp  registry.cpp  registry.h
pxr/base/tf/: CMakeLists.txt  __init__.py  api.h  atomicRenameUtil.cpp  debug.cpp  diagnostic.cpp  diagnosticMgr.cpp  initConfig.cpp  mallocTag.cpp  module.cpp  notice.h  noticeRegistry.cpp  noticeRegistry.h  overview.dox  pyCallContext.cpp  pyCallContext.h  pyLock.cpp  scopeDescription.cpp  scopeDescriptionPrivate.h  smallVector.cpp  stringUtils.h  wrapError.cpp  wrapException.cpp  wrapMallocTag.cpp  wrapScopeDescription.cpp  wrapStatus.cpp  wrapToken.cpp  wrapWarning.cpp
pxr/base/trace/: CMakeLists.txt  aggregateNode.cpp  aggregateTreeBuilder.cpp  eventNode.cpp  eventTree.cpp  jsonSerialization.cpp  jsonSerialization.h  overview.dox  reporter.cpp  serialization.cpp  wrapAggregateNode.cpp
pxr/base/ts/: CMakeLists.txt  binary.cpp  diff.cpp  diff.h  eval.cpp  iterator.cpp  iterator.h  knot.cpp  knotData.cpp  knotMap.cpp  regressionPreventer.cpp  sample.cpp  sample.h  segment.cpp  spline.cpp  spline.h  splineData.cpp  splineData.h  tsTest_Museum.cpp  tsTest_Museum.h  tsTest_TsEvaluator.cpp  types.cpp  wrapKnot.cpp  wrapSpline.cpp  wrapTsTest_Types.cpp  wrapTypes.cpp
pxr/base/vt/: CMakeLists.txt  array.h  arrayEdit.cpp  arrayEdit.h  dictionary.cpp  dictionary.h  module.cpp  types.cpp  value.cpp  value.h  valueCommon.cpp  valueComposeOver.cpp  valueRef.cpp  valueTransform.cpp  wrapValue.cpp  wrapValueRef.cpp
pxr/base/work/: CMakeLists.txt  dispatcher.cpp  impl.h.in  loops.h  overview.dox  taskGraph.cpp  taskGraph_defaultImpl.cpp  threadLimits.cpp
pxr/exec/: CMakeLists.txt  README.md
pxr/exec/ef/: CMakeLists.txt  README.md  loftedOutputSet.cpp  outputValueCache.cpp  pageCacheBasedExecutor.h  pageCacheCommitRequest.cpp  pageCacheStorage.cpp  pch.h  time.cpp  timeInterval.cpp
pxr/exec/esf/: CMakeLists.txt  README.md  attribute.cpp  attributeQuery.cpp  editReason.cpp  fixedSizePolymorphicHolder.cpp  object.cpp  prim.cpp  property.cpp  relationship.cpp  stage.cpp
pxr/exec/esfUsd/: CMakeLists.txt  README.md  attribute.cpp  attribute.h  attributeQuery.cpp  attributeQuery.h  object.cpp  object.h  pch.h  plugInfo.json  prim.cpp  prim.h  property.cpp  property.h  relationship.cpp  relationship.h  sceneAdapter.cpp  stage.cpp  stage.h
pxr/exec/exec/: CMakeLists.txt  README.md  attributeInputNode.cpp  attributeInputNode.h  authoredValueInvalidationResult.h  builtinAttributeComputations.cpp  builtinAttributeComputations.h  builtinComputations.cpp  builtinObjectComputations.cpp  builtinObjectComputations.h  builtinStageComputations.cpp  builtinStageComputations.h  cacheView.cpp  callbackNode.h  compilationState.h  compilationTask.cpp  compilationTask.h  compiledLeafNodeCache.cpp  compiledLeafNodeCache.h  compiledOutputCache.cpp  compiledOutputCache.h  compiler.cpp  compiler.h  compilerTaskSync.cpp  compilerTaskSync.h  compilerTaskSyncBase.cpp  compilerTaskSyncBase.h  computationBuilders.cpp  computationDefinition.cpp  computationDefinition.h  constantValueNode.cpp  constantValueNode.h  cycleDetectingTask.cpp  cycleDetectingTask.h  debugCodes.cpp  definitionRegistry.cpp  definitionRegistry.h  disconnectedInputsInvalidationResult.h  inputKey.h  inputRecompilationTask.cpp  (+57 more)
pxr/exec/execGeom/: CMakeLists.txt  README.md  pch.h  plugInfo.json  tokens.cpp  xformable.cpp
pxr/exec/execIr/: CMakeLists.txt  README.md  controllerBuilder.cpp  controllerBuilder.h  fkController.cpp  generatedSchema.usda  pch.h  plugInfo.json  schema.usda  tokens.cpp  types.cpp  types.h  utils.cpp  utils.h
pxr/exec/execUsd/: CMakeLists.txt  README.md  cacheView.cpp  pch.h  request.cpp  requestImpl.cpp  requestImpl.h  system.cpp  valueKey.cpp  visitValueKey.h
pxr/exec/vdf/: CMakeLists.txt  README.md  dataManagerAllocator.h  dataManagerHashTable.cpp  debugCodes.h  dotGrapher.cpp  dotGrapher.h  executionStats.cpp  executionTypeRegistry.cpp  executorDataVector.cpp  executorInvalidator.cpp  isolatedSubnetwork.cpp  network.cpp  node.cpp  output.cpp  parallelDataManagerVector.cpp  parallelExecutorDataVector.cpp  parallelTaskWaitlist.cpp  pch.h  poolChainIndexer.cpp  schedule.cpp  scheduleInvalidator.cpp  scheduler.cpp  sparseOutputTraverser.cpp  sparseVectorizedOutputTraverser.cpp  speculationExecutorEngine.h  typeDispatchTable.cpp  types.cpp
pxr/imaging/garch/: CMakeLists.txt  __init__.py  glPlatformDebugWindowWindows.cpp
pxr/imaging/geomUtil/: CMakeLists.txt
pxr/imaging/glf/: diagnostic.cpp  simpleShadowArray.cpp
pxr/imaging/hd/: CMakeLists.txt  basisCurves.cpp  builtinMaterialSchema.cpp  cachingSceneIndex.cpp  changeTracker.cpp  containerDataSourceEditor.cpp  dataSource.cpp  dataSourceLegacyPrim.cpp  dataSourceLocator.cpp  dataSourceTypeDefs.h  dependencyForwardingSceneIndex.cpp  dirtyBitsTranslator.cpp  dirtyList.cpp  engine.cpp  flattenedPurposeDataSourceProvider.cpp  flatteningSceneIndex.cpp  flatteningSceneIndex.h  hdGenSchema.py  hdSchemaDefs.py  legacyGeomSubsetSceneIndex.cpp  legacyPrimSceneIndex.cpp  legacyRenderControlInterface.cpp  materialInterfaceParameterSchema.cpp  materialInterfaceSchema.cpp  materialNetworkSchema.cpp  materialOverrideSchema.cpp  materialSchema.cpp  materialSchema.h  mergingSceneIndex.cpp  mesh.cpp  meshUtil.cpp  noticeBatchingSceneIndex.cpp  pluginRendererUniqueHandle.cpp  prefixingSceneIndex.cpp  primGather.cpp  primvarSchema.cpp  primvarSchema.h  purposeSchema.cpp  renderDelegate.cpp  renderDelegate.h  (+33 more)
pxr/imaging/hdGp/: generativeProcedural.h  (+5 more)
pxr/usd/: CMakeLists.txt
pxr/usdValidation/: README.md
(+1582 files in other folders)
