add_subdirectory(hdStorm)
if (${PXR_BUILD_EMBREE_PLUGIN})
    add_subdirectory(hdEmbree)
endif()
if (APPLE AND PXR_BUILD_IMAGEIO_PLUGIN)
    add_subdirectory(hioImageIO)
endif()
if (PXR_BUILD_OPENIMAGEIO_PLUGIN)
    add_subdirectory(hioOiio)
endif()
add_subdirectory(hioOpenEXR)
add_subdirectory(hioAvif)
